crates/rome_cli/tests/snapshots/main_commands_lint/ignores_unknown_file.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `test.js`

```js
console.log('bar');

```

## `test.txt`

```txt
content
```

# Emitted Messages

```block
Checked 1 file(s) in <TIME>
```


