crates/rome_cli/tests/snapshots/main_commands_lint/no_lint_if_linter_is_disabled.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "enabled": false
  }
}
```

## `fix.js`

```js
(1 >= -0)
```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  


```

# Emitted Messages

```block
Checked 0 file(s) in <TIME>
```


